# aoc

./: .gitignore
2015/: .editorconfig  .gitignore  .mise.toml  Justfile
2015/d01/: one.hs  two.hs
2015/d02/: CHANGELOG.md  LICENSE  d02.cabal
2015/d02/app/: Main.hs
2015/d03/: CHANGELOG.md  d03.cabal
2015/d03/app/: main.hs
2015/d03/lib/: D03.hs
2015/d03/test/: main-test.hs
2015/d04/: CHANGELOG.md  d04.cabal
2015/d04/app/: Main.hs
2015/d04/lib/: MyLib.hs
2015/d05/: CHANGELOG.md  d05.cabal
2015/d05/app/: Main.hs
2015/d06/: CHANGELOG.md  d06.cabal
2015/d06/app/: Main.hs
2015/d07/: CHANGELOG.md  LICENSE  d07.cabal
2015/d07/src-exe/: Main.hs
2015/d08/: CHANGELOG.md  d08.cabal
2015/d08/app/: Main.hs
2015/d09/: CHANGELOG.md  d09.cabal
2015/d09/app/: Main.hs
2015/d10/: CHANGELOG.md  d10.cabal
2015/d10/app/: Main.hs
2015/d11/: CHANGELOG.md  d11.cabal
2015/d11/app/: Main.hs
2015/d12/: CHANGELOG.md  d12.cabal
2015/d12/app/: Main.hs
2015/d13/: CHANGELOG.md  d13.cabal
2015/d13/app/: Main.hs
2015/d14/: CHANGELOG.md  d14.cabal
2015/d14/app/: Main.hs
2015/d15/: CHANGELOG.md  d15.cabal
2015/d15/app/: Main.hs
2015/d16/: CHANGELOG.md  d16.cabal  fourmolu.yaml
2015/d16/app/: Main.hs
2015/d17/: CHANGELOG.md  d17.cabal
2015/d17/app/: Main.hs
2015/d18/: CHANGELOG.md  d18.cabal
2015/d18/app/: Main.hs
2015/d19/: CHANGELOG.md  d19.cabal
2015/d19/app/: Main.hs
2022/: .tool-versions  build.zig  build.zig.zon
2023/lib/aoc2023/: d19.ex  d24.ex
2023/test/aoc2023/: d24_test.exs
2024/: .gitignore  .mise.toml  package-lock.json  package.json
2024/d01/: one.js  two.js
2024/d02/: one.js  two.js
2024/d03/: one.js  two.js
2024/d04/: one.js  two.js
2024/d05/: one.js  two.js
2024/d06/: one.js  two.js
2024/d07/: one.js  two.js
2024/d08/: one.js  two.js
2024/d09/: one.js  two.js
2024/d10/: one.js  two.js
2024/d11/: one.js  two.js
2024/d12/: one.js  tiny.txt  two.js
2024/d13/: one.js  two.js
2024/d14/: one.js  two.js
2024/d15/: one.js  two.js
2024/d16/: one.js  two.js
2024/d17/: one.js  two.js
2024/d18/: one.js  two.js
2024/d19/: one-regex.js  one.js  two.js
2024/d20/: one.js  two.js
2024/d21/: one.js  two.js
2024/d22/: one.js  test.txt  two.js
2024/d23/: one.js  two.js
2024/d24/: one.js  two.js
2024/d25/: one.js
2024/lib/: coords.js  gen.js  graph.js  linear.js  math.js  read.js  utils.js
2025/: .mise.toml
2025/d01/: solve.py
2025/d02/: solve.py
2025/d03/: solve.py
2025/d04/: solve.py
2025/d05/: solve.py
2025/d06/: solve.py
2025/d07/: solve.py
2025/d08/: solve.py
2025/d09/: solve.py
2025/d10/: solve.py  thick.txt
2025/d11/: solve.py
2025/d12/: solve.py  test.txt
