cabal-version:   3.12
name:            d12
version:         0.1.0.0
license:         NONE
author:          Unknown
maintainer:      Unknown
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable d12
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
