cabal-version:   3.12
name:            d16
version:         0.1.0.0
license:         NONE
author:          Unknown
maintainer:      Unknown
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable d16
    import:           warnings
    main-is:          Main.hs
    build-depends:    extra ^>=1.8
                    , containers ^>=0.7
                    , base ^>=4.20.0.0
                    , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
